--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,6 +1,9 @@
 <h1>New Group</h1>
 A backup form for people who aren't using JavaScript<br><br>
 <%= form_for @group do |f| %>
+<%= f.label(:author_id, 'Author: ') %>
+<% authors_array = @authors.map { |author| [author.name, author.id]} %>
+<%= f.select(:author_id, options_for_select(authors_array)) %><br><br>
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.submit %>
