--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,11 +1,11 @@
 <h1><%= @group.name %></h1>
 <% if @items.first %>
+<%= link_to('Edit this Group', edit_group_path) %> <%= link_to('Delete this Group', group_path, method: :delete, data: { confirm: "Are you sure?" }) %><br><br>
 <textarea rows="<%= @items.count %>" cols="<%= @items.map(&:name).max_by(&:length).length %>">
   <% @items.each do |item| %>
   <%= item.name %>
   <% end %>
-</textarea><br><br>
-<%= link_to('Edit this Group', edit_group_path) %>
+</textarea>
 <% else %>
 No items in this group! <%= link_to('Add some', new_group_item_path(@group.id)) %>.
 <% end %>
