Styled everything with pure. Tested everything and anything that errored was removed.

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Groups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  padding: 0 30%;
+}
+
+.splash {
+  padding-top: 30%;
+}
+
+.ta-c {
+  text-align: center;
+}
+
+.menu-box {
+  padding: 1em 0;
+}
