--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for [@group, @item] do |f| %>
+<%= form_for [@group, @item], :html => {:class => 'pure-form'} do |f| %>
 <%= f.label(:author_id, 'Author: ') %>
 <% authors_array = @authors.map { |author| [author.name, author.id]} %>
 <%= f.select(:author_id, options_for_select(authors_array, @group.author_id)) %><br><br>
 <%= f.text_area(:name, :placeholder => 'Add items here! 1 item per line', :rows => 30, :cols => 40) %><br>
-<%= f.submit 'Create item(s)' %>
+<div class="menu-box"><button class="pure-button-primary pure-button">Create item(s)</button></div>
 <% end %>
