--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -3,7 +3,7 @@
 <%= f.label(:author_id, 'Author: ') %>
 <% authors_array = @authors.map { |author| [author.name, author.id]} %>
 <%= f.select(:author_id, options_for_select(authors_array)) %>
-<%= f.label :name %>
+<%= f.label(:name, 'Name: ') %>
 <%= f.text_field :name %>
 <button class="pure-button-primary pure-button">Create Group</button>
 <% end %>
